# mindbase

./: .env.example  .gitignore  .npmrc  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  INSTALL.md  INTEGRATION_PLAN.md  MONOREPO.md  MONOREPO_PLAN.md  Makefile  PROJECT_INDEX.md  README.md  ROADMAP.md  SECURITY.md  compose.yml  docker-compose.yml  manifest.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pytest.ini  requirements.txt  test_memory.mjs  test_memory_simple.mjs  tsconfig.json  tsconfig.mcp.json
.github/workflows/: auto-merge.yml  ci.yml  docker-publish-mcp.yml  release-menubar.yml  release.yml  test.yml
.husky/: pre-push
Formula/: mindbase-menubar.rb  mindbase.rb
app/: main.py  ollama_client.py
app/crud/: conversation.py
app/models/: conversation.py
app/schemas/: conversation.py
apps/api/: __init__.py  config.py  database.py  main.py  ollama_client.py  pyproject.toml  requirements.txt
apps/api/api/routes/: chat.py  control.py  conversations.py  embeddings.py  health.py  settings.py
apps/api/api/schemas/: __init__.py  embeddings.py
apps/api/crud/: __init__.py  conversation.py  embeddings.py  search.py
apps/api/models/: __init__.py  conversation.py
apps/api/schemas/: __init__.py  conversation.py
apps/api/services/: __init__.py  classifier.py  deriver.py  hardware.py  model_catalog.py  model_manager.py  pipelines.py  settings_store.py
apps/api/workers/: raw_deriver.py
apps/cli/: Dockerfile  claude-code.ts  db.ts  index.ts  package.json  tsconfig.json
apps/mcp-server/: Dockerfile  config.ts  index.ts  package.json  tool-dispatcher.ts  tool-registry.ts  tsconfig.json
apps/menubar/: .npmrc  README.md  main.js  package.json  preload.js  settings.html  watcher.js
apps/menubar-swift/: Package.swift  README.md
apps/settings/: index.html  package.json
claude-blog-automation/: README.md  package.json
collectors/: __init__.py  base_collector.py  chatgpt_collector.py  claude_collector.py  cursor_collector.py  data_normalizer.py  windsurf_collector.py
config/: daemon-config.json
content/articles/: 2026-03-28-claude-code-senior-engineer-en.md  2026-03-28-claude-code-senior-engineer-ja.md
database/migrations/: 20241217120000_mind_base_schema.sql  20241217130000_analysis_triggers.sql  20251019000000_memory_storage.sql
docs/: AIRIS_MCP_INTEGRATION.md  MEMORY_SYSTEM.md  MENUBAR_RELEASE.md  README.md  TASKS.md  conversation-data-sources.md
docs/research/: apple_menubar_investigation_2025-01-21.md  data-sources-research-2025-10-14.md  serena_vs_mindbase_analysis_2025-10-19.md
libs/collectors/: __init__.py  base_collector.py  chatgpt_collector.py  claude_code_collector.py  claude_collector.py  cursor_collector.py  data_normalizer.py  deduplication.py  gemini_collector.py  parsing.py  pyproject.toml  validation.py  windsurf_collector.py
libs/embedding/: embedding-client.ts  package.json
libs/generators/: article-generator.ts  llm-client.ts  package.json  platform-prompts.ts  publish-note.ts  publish-qiita.ts  publish-zenn.ts
libs/markdown/: frontmatter.ts  (+1 more)
scripts/: backup-mindbase.sh  build-menubar-app.sh  collect-conversations.py  com.mindbase.plist  import_claude_code.py  install-local.sh  sync-daemon.py  test-collectors.py
tests/: conftest.py  test_chat_and_conversations.py  test_classifier.py  test_control_api.py  test_health.py  test_settings_api.py
vectorizer/: ollama_embeddings.py
(+95 files in other folders)
